# scopefig

./: .gitignore  Cargo.toml
src/: main.rs  svg.rs
