[package]
name = "scopefig"
version = "0.1.0"
authors = ["Erin Moon <erin@hecke.rs>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
hound = "3.4"
structopt = "0.3"
femme = "2.1"
kv-log-macro = "1.0"
roxmltree = { version = "0.14", features = ["std"] }
lyon_svg = "0.17"
lyon_geom = "0.17"
lyon_path = "0.17"
svgtypes = "0.5"